--- a/index.html
+++ b/index.html
@@ -4,71 +4,76 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
     <!--шапка-->
-    <header>
+    <header class="header">
       <!--навигационные элементы-->
-      <nav>
+      <nav class="navigation">
         <!--лого-ссылка-->
-        <a href="./index.html" aria-label="логотип вэбстудия">WebStudio</a>
-        <ul>
-          <li>
-            <a href="">Студия</a>
+        <a class="logo link" href="./index.html" aria-label="логотип вэбстудия">Web<span class="logo-item">Studio</span></a>
+        <ul class="navigation-list list">
+          <li class="navigation-list-item">
+            <a class="navigation-list-link link" href="">Студия</a>
           </li>
-          <li>
-            <a href="./portfolio.html">Портфолио</a>
+          <li class="navigation-list-item">
+            <a class="navigation-list-link link" href="./portfolio.html">Портфолио</a>
           </li>
-          <li>
-            <a href="">Контакты</a>
+          <li class="navigation-list-item">
+            <a class="navigation-list-link link" href="">Контакты</a>
           </li>
         </ul>
       </nav>
-
-      <ul>
+      <ul class="list">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="header-mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
 
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="header-tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
     <main>
       <!--HERO-->
       <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button class="modal-btn" type="button">Заказать услугу</button>
       </section>
+
+      <!--ОСОБЕННОСТИ-->
       <section>
-        <h2>Особенности</h2>
-        <ul>
+        <h2 class="title">Особенности</h2>
+        <ul class="list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <h3 class="subtitle">Внимание к деталям</h3>
+            <p class="description">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
 
           <li>
-            <h3>Пунктуальность</h3>
-            <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+            <h3 class="subtitle">Пунктуальность</h3>
+            <p class="description">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
           </li>
 
           <li>
-            <h3>Планирование</h3>
-            <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+            <h3 class="subtitle">Планирование</h3>
+            <p class="description">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
           </li>
 
           <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            <h3 class="subtitle">Современные технологии</h3>
+            <p class="description">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
         </ul>
       </section>
 
       <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+        <h2 class="title">Чем мы занимаемся</h2>
+        <ul class="list">
           <li>
             <img src="./images/studio/we-doing/box1.jpg" alt="специалист работает за планшетом и компьютером" width="370" height="294" />
           </li>
@@ -83,44 +88,46 @@
 
       <!--НАША КОМАНДА-->
       <section>
-        <h2>Наша команда</h2>
-        <ul>
+        <h2 class="title">Наша команда</h2>
+        <ul class="list">
           <li>
             <img src="./images/studio/our-team/img-1.jpg" alt="Фото Игоря Демьяненко" width="270" height="260" />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="name-title">Игорь Демьяненко</h3>
+            <p class="position">Product Designer</p>
           </li>
 
           <li>
             <img src="./images/studio/our-team/img-2.jpg" alt="Фото Ольги Репиной" width="270" height="260" />
 
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="name-title">Ольга Репина</h3>
+            <p class="position">Frontend Developer</p>
           </li>
 
           <li>
             <img src="./images/studio/our-team/img-3.jpg" alt="Фото Николая Тарасова" width="270" height="260" />
 
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="name-title">Николай Тарасов</h3>
+            <p class="position">Marketing</p>
           </li>
 
           <li>
             <img src="./images/studio/our-team/img-4.jpg" alt="Фото Михаила Ермакова" width="270" height="260" />
 
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="name-title">Михаил Ермаков</h3>
+            <p class="position">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html" aria-label="логотип вэбстудия">WebStudio</a>
 
-      <address>
-        г. Киев, пр-т Леси Украинки, 26 <br />
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+    <!--ФУТЕР-->
+    <footer>
+      <a class="logo link" href="./index.html" aria-label="логотип вэбстудия">Web<span class="logo-item">Studio</span></a>
+
+      <address class="address">
+        <span>г. Киев, пр-т Леси Украинки, 26</span><br />
+        <a class="footer-mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a><br />
+        <a class="footer-tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
       </address>
     </footer>
   </body>
