--- a/portfolio.html
+++ b/portfolio.html
@@ -4,135 +4,141 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфолио</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--ШАПКА-->
-    <header>
+    <header class="header">
       <!--навигационные элементы-->
-      <nav>
+      <nav class="navigation">
         <!--лого-ссылка-->
-        <a href="./index.html" aria-label="логотип вэбстудия">WebStudio</a>
-        <ul>
-          <li>
-            <a href="">Студия</a>
+        <a class="logo link" href="./index.html" aria-label="логотип вэбстудия">Web<span class="logo-item">Studio</span></a>
+        <ul class="navigation-list list">
+          <li class="navigation-list-item">
+            <a class="navigation-list-link link" href="">Студия</a>
           </li>
-          <li>
-            <a href="">Портфолио</a>
+          <li class="navigation-list-item">
+            <a class="navigation-list-link link" href="./portfolio.html">Портфолио</a>
           </li>
-          <li>
-            <a href="">Контакты</a>
+          <li class="navigation-list-item">
+            <a class="navigation-list-link link" href="">Контакты</a>
           </li>
         </ul>
       </nav>
-
-      <ul>
+      <ul class="list">
         <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="header-mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
 
         <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="header-tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
 
+    <!--MAIN-->
+
     <main>
       <!--ПОРТФОЛИО-->
-      <section>
+      <section class="portfolio">
         <h1>Портфолио</h1>
         <!--ФИЛЬТР-->
-        <ul>
+        <ul class="filter list">
           <li>
-            <button type="button">Все</button>
+            <button class="filter-list" type="button">Все</button>
           </li>
           <li>
-            <button type="button">Веб-сайты</button>
+            <button class="filter-list" type="button">Веб-сайты</button>
           </li>
           <li>
-            <button type="button">Приложения</button>
+            <button class="portfolio-list" type="button">Приложения</button>
           </li>
           <li>
-            <button type="button">Дизайн</button>
+            <button class="filter-list" type="button">Дизайн</button>
           </li>
           <li>
-            <button type="button">Маркетинг</button>
+            <button class="filter-list" type="button">Маркетинг</button>
           </li>
         </ul>
         <!--ПЕРЕЧЕНЬ РАБОТ-->
-        <ul>
-          <li>
-            <a href="">
-              <img src="./images/portfolio/img.jpg" alt="Изображение фотографий трёх сотрудников на экране ноутбука" width="378" height="302" />
-              <h2>Технокряк</h2>
-              <p>Веб-сайт</p>
+        <ul class="portfolio-list list">
+          <li class="potfolio-list-item">
+            <a class="link" href="">
+              <img class="portfolio-list-img" src="./images/portfolio/img.jpg" alt="Изображение фотографий трёх сотрудников на экране ноутбука" width="378" height="302" />
+              <h2 class="portfolio-list-name">Технокряк</h2>
+              <p class="portfolio-list-type">Веб-сайт</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="link" href="">
               <img src="./images/portfolio/img-1.jpg" alt="Два баскетболиста с противоположных команд тянутся в прыжке к мячу" width="378" height="302" />
-              <h2>Постер New Orlean vs Golden Star</h2>
-              <p>Дизайн</p>
+              <h2 class="portfolio-list-name">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+              <p class="portfolio-list-type">Дизайн</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="link" href="">
               <img src="./images/portfolio/img-2.jpg" alt="Логотип ресторана SeaFood" width="378" height="302" />
-              <h2>Ресторан Seafood</h2>
-              <p>Приложение</p>
+              <h2 class="portfolio-list-name">Ресторан <span lang="en">Seafood</span></h2>
+              <p class="portfolio-list-type">Приложение</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="link" href="">
               <img src="./images/portfolio/img-3.jpg" alt="Чёрные накладные наушники" width="378" height="302" />
-              <h2>Проект Prime</h2>
-              <p>Маркетинг</p>
+              <h2 class="portfolio-list-name">Проект <span lang="en">Prime</span></h2>
+              <p class="portfolio-list-type">Маркетинг</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="link" href="">
               <img src="./images/portfolio/img-4.jpg" alt="Белая и коричневая коробочки" width="378" height="302" />
-              <h2>Проект Boxes</h2>
-              <p>Приложение</p>
+              <h2 class="portfolio-list-name">Проект <span lang="en">Boxes</span></h2>
+              <p class="portfolio-list-type">Приложение</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="link" href="">
               <img src="./images/portfolio/img-5.jpg" alt="Включеный монитор Apple" width="378" height="302" />
-              <h2>Inspiration has no Borders</h2>
-              <p>Веб-сайт</p>
+              <h2 class="portfolio-list-name" lang="en">Inspiration has no Borders</h2>
+              <p class="portfolio-list-type">Веб-сайт</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="link" href="">
               <img src="./images/portfolio/img-6.jpg" alt="Раскрытая книга" width="378" height="302" />
-              <h2>Издание Limited Edition</h2>
-              <p>Дизайн</p>
+              <h2 class="portfolio-list-name">Издание <span lang="en">Limited Edition</span></h2>
+              <p class="portfolio-list-type">Дизайн</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="link" href="">
               <img src="./images/portfolio/img-7.jpg" alt="Этикетка с надписью LAB EL TAG" width="378" height="302" />
-              <h2>Проект LAB</h2>
-              <p>Маркетинг</p>
+              <h2 class="portfolio-list-name">Проект <span lang="en">LAB</span></h2>
+              <p class="portfolio-list-type">Маркетинг</p>
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="link" href="">
               <img src="./images/portfolio/img-8.jpg" alt="Руки что-то набирают на ноутбуке, на экране которого написано Growing Business" width="378" height="302" />
-              <h2>Growing Business</h2>
-              <p>Приложение</p>
+              <h2 class="portfolio-list-name" lang="en">Growing Business</h2>
+              <p class="portfolio-list-type">Приложение</p>
             </a>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html" aria-label="логотип вэбстудия">WebStudio</a>
 
-      <address>
-        г. Киев, пр-т Леси Украинки, 26 <br />
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a><br />
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+    <!--ФУТЕР-->
+    <footer>
+      <a class="logo link" href="./index.html" aria-label="логотип вэбстудия">Web<span class="logo-item">Studio</span></a>
+
+      <address class="address">
+        <span>г. Киев, пр-т Леси Украинки, 26</span><br />
+        <a class="footer-mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a><br />
+        <a class="footer-tel-link link" href="tel:+380961111111">+38 096 111 11 11</a>
       </address>
     </footer>
   </body>
