--- a/portfolio.html
+++ b/portfolio.html
@@ -13,21 +13,23 @@
     <header class="header">
       <!--навигационные элементы-->
       <nav class="navigation">
-        <!--лого-ссылка-->
+        <!--ЛОГО-ССЫЛКА-->
         <a class="logo link" href="./index.html" aria-label="логотип вэбстудия">Web<span class="logo-item">Studio</span></a>
+        <!-------СПИСОК НАВИГАЦИОННЫХ ЭЛЕМЕНТОВ----->
         <ul class="navigation-list list">
           <li class="navigation-list-item">
-            <a class="navigation-list-link link" href="">Студия</a>
+            <a class="navigation-list-link link" href="./index.html">Студия</a>
           </li>
           <li class="navigation-list-item">
-            <a class="navigation-list-link link" href="./portfolio.html">Портфолио</a>
+            <a class="navigation-list-link link current" href="./portfolio.html">Портфолио</a>
           </li>
           <li class="navigation-list-item">
             <a class="navigation-list-link link" href="">Контакты</a>
           </li>
         </ul>
       </nav>
-      <ul class="list">
+      <!--КОНТАКТЫ-->
+      <ul class="navigation-contacts list">
         <li>
           <a class="header-mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
@@ -43,7 +45,7 @@
     <main>
       <!--ПОРТФОЛИО-->
       <section class="portfolio">
-        <h1>Портфолио</h1>
+        <h1 class="portfolio-title">Портфолио</h1>
         <!--ФИЛЬТР-->
         <ul class="filter list">
           <li>
@@ -53,7 +55,7 @@
             <button class="filter-list" type="button">Веб-сайты</button>
           </li>
           <li>
-            <button class="portfolio-list" type="button">Приложения</button>
+            <button class="filter-list" type="button">Приложения</button>
           </li>
           <li>
             <button class="filter-list" type="button">Дизайн</button>
@@ -132,8 +134,8 @@
     </main>
 
     <!--ФУТЕР-->
-    <footer>
-      <a class="logo link" href="./index.html" aria-label="логотип вэбстудия">Web<span class="logo-item">Studio</span></a>
+    <footer class="footer">
+      <a class="logo link" href="./index.html" aria-label="логотип вэбстудия">Web<span class="footer-logo-item">Studio</span></a>
 
       <address class="address">
         <span>г. Киев, пр-т Леси Украинки, 26</span><br />
